# tw-futures-opt-lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  generate_report_pdf.py  main.py  pyproject.toml
.github/workflows/: ci-frontend.yml  ci-python.yml
api/: db.py  main.py  schemas.py
api/routers/: backtest.py  data.py
api/services/: runner.py
deploy/: deploy.sh  nginx-futures-lab.conf
docker/: Dockerfile.api  Dockerfile.frontend
docs/: shioaji-integration-plan.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/backtest/[id]/: page.tsx
frontend/src/app/backtest/new/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/charts/: DailyPnL.tsx  DrawdownChart.tsx  EquityCurve.tsx  PositionCount.tsx  PutCostChart.tsx
frontend/src/components/forms/: BacktestForm.tsx
frontend/src/components/tables/: TradeTable.tsx
frontend/src/lib/: api.ts
frontend/src/types/: backtest.ts
src/: config.py  models.py
src/calendar/: settlement.py
src/data/: taifex_loader.py
src/report/: metrics.py
src/strategy/: engine.py  put_selector.py  slippage.py
tests/: conftest.py  test_engine.py  test_metrics.py  test_put_selector.py  test_settlement.py  test_slippage.py
